--- a/style.css
+++ b/style.css
@@ -1,15 +1,14 @@
 body {
-  margin: 0;
-  height: 100vh;
+  margin:0;
   background-color: #fffdf9;
   font-family: 'Pretendard', sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
 }
 
+.container {
+  padding: 60px 30px;
+  max-width: 700px;
+  text-align: left;
+}
 h1 {
   font-size: 2.5rem;
   margin-bottom: 1rem;
@@ -19,8 +18,10 @@ p {
   font-size: 1.2rem;
   max-width: 500px;
   line-height: 1.6;
-  margin: 0 1rem 2rem;
+
 }
+
+
 
 .email-link {
   margin-top: 2rem;
