--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin:0;
-  background-color: #fffdf9;
-  font-family: 'Pretendard', sans-serif;
+  background-color: #fffff0;
+  font-family: 'Karla', 'Noto Sans KR', sans-serif;
 }
 
 .container {
@@ -9,15 +9,22 @@ body {
   max-width: 700px;
   text-align: left;
 }
+
 h1 {
-  font-size: 2.5rem;
-  margin-bottom: 1rem;
+  font-size: 18px;
+  font-family: 'Noto Sans KR', sans-serif;
+  font-weight: 100;
+  letter-spacing: -0.02em;
+  
 }
 
 p {
-  font-size: 1.2rem;
+  font-size: 15px;
   max-width: 500px;
-  line-height: 1.6;
+  line-height: 1.4;
+  font-family: 'Karla', sans-serif;
+  font-weight: 200;
+  letter-spacing: -0.02em;
 
 }
 
@@ -25,12 +32,7 @@ p {
 
 .email-link {
   margin-top: 2rem;
-  font-size: 1rem;
-  text-decoration: underline;
+  font-size: 10px;
   color: #555;
   cursor: pointer;
-}
-
-.email-link:hover {
-  color: #000;
 }
